--- a/config/geodesign-game-configuraton-tool-main/Web App/Configuration Tool Interface.html
+++ b/config/geodesign-game-configuraton-tool-main/Web App/Configuration Tool Interface.html
@@ -11,7 +11,7 @@
     <style>
         /* Add custom styles here */
         #map {
-            height: 600px;
+            height: 400px;
         }
     </style>
 </head>
@@ -59,7 +59,7 @@
         const map = L.map('map').setView([51.5074, -0.1278], 10);
 
         // Replace 'your_mapbox_access_token' with your Mapbox access token
-        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoiaWFubnVjZCIsImEiOiJjbGt3bnNodjgwZGpoM2RuMDd6NHpkbDd1In0.kt8-GKK3WpnhNMRpJ-7EJQ', {
+        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=your_mapbox_access_token', {
             attribution: '&copy; <a href="https://www.mapbox.com/">Mapbox</a>',
             id: 'mapbox/streets-v11',
             tileSize: 512,
